setup.py; additional pre-commit hooks
Signed-off-by: Jeffrey James <lobotmcj@gmail.com>

--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -1,3 +1,7 @@
+# Copyright (c) 2019-present, The Johann Authors. All Rights Reserved.
+# Use of this source code is governed by a BSD-3-clause license that can
+# be found in the LICENSE file. See the AUTHORS file for names of contributors.
+
 -c requirements.txt
 
 pre-commit>=1.21.0
