--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
-[options]
-python_requires = >=3.6
+# Copyright (c) 2019-present, The Johann Authors. All Rights Reserved.
+# Use of this source code is governed by a BSD-3-clause license that can
+# be found in the LICENSE file. See the AUTHORS file for names of contributors.
 
 [flake8]
 max-line-length = 88
@@ -12,18 +13,3 @@ ignore = E203, E501, W503
 [isort]
 profile=black
 known_first_party=johann
-
-[mypy]
-python_version = 3.6
-check_untyped_defs = True
-ignore_missing_imports = True
-warn_unused_ignores = True
-warn_redundant_casts = True
-warn_unused_configs = True
-
-[tool:pytest]
-testpaths=tests/
-
-[coverage:run]
-include = johann/*
-omit = *tests*
