--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,12 +10,15 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: master
     hooks:
+      - id: check-ast
       - id: check-byte-order-marker
       - id: check-executables-have-shebangs
       - id: trailing-whitespace
       - id: check-merge-conflict
       - id: check-docstring-first
       - id: check-added-large-files
+      - id: detect-private-key
+      - id: mixed-line-ending
       - id: name-tests-test
       - id: check-json
       - id: check-yaml
@@ -51,6 +54,7 @@ repos:
     hooks:
       - id: pip-compile
         args: [--quiet, --generate-hashes, --no-emit-index-url]
+        files: ^((requirements(-.*)?\.(in|txt))|setup.py)$
       - id: pip-compile
         name: pip-compile-dev
         args:
@@ -62,7 +66,7 @@ repos:
             --output-file=requirements-dev.txt,
             requirements-dev.in,
           ]
-        files: ^requirements(-dev)?\.(in|txt)$
+        files: ^((requirements(-.*)?\.(in|txt))|setup.py)$
 
   - repo: https://github.com/PyCQA/bandit
     rev: 1.6.2
