--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ aiohttp==3.6.2 \
     --hash=sha256:65f31b622af739a802ca6fd1a3076fd0ae523f8485c52924a89561ba10c49b48 \
     --hash=sha256:ae55bac364c405caa23a4f2d6cfecc6a0daada500274ffca4a9230e7129eac59 \
     --hash=sha256:b778ce0c909a2653741cb4b1ac7015b5c130ab9c897611df43ae6a58523cb965 \
-    # via -r requirements.in
+    # via johann (setup.py)
 amqp==2.6.1 \
     --hash=sha256:70cdb10628468ff14e57ec2f751c7aa9e48e7e3651cfd62d431213c0c4e58f21 \
     --hash=sha256:aa7f313fb887c91f15474c1229907a04dac0b8135822d6603437803424c0aa59 \
@@ -37,7 +37,7 @@ billiard==3.6.3.0 \
 celery==4.4.6 \
     --hash=sha256:ef17d7dffde7fc73ecab3a3b6389d93d3213bac53fa7f28e68e33647ad50b916 \
     --hash=sha256:fd77e4248bb1b7af5f7922dd8e81156f540306e3a5c4b1c24167c1f5f06025da \
-    # via -r requirements.in
+    # via johann (setup.py)
 certifi==2020.6.20 \
     --hash=sha256:5930595817496dd21bb8dc35dad090f1c2cd0adfaf21204bf6732ca5d8ee34d3 \
     --hash=sha256:8fc0819f1f30ba15bdb34cceffb9ef04d99f420f68eb75d901e9560b8749fc41 \
@@ -49,15 +49,15 @@ chardet==3.0.4 \
 dataclasses==0.6 \
     --hash=sha256:454a69d788c7fda44efd71e259be79577822f5e3f53f029a22d08004e951dc9f \
     --hash=sha256:6988bd2b895eef432d562370bb707d540f32f7360ab13da45340101bc2307d84 \
-    # via -r requirements.in, pydantic
+    # via johann (setup.py), pydantic
 docker==4.3.0 \
     --hash=sha256:431a268f2caf85aa30613f9642da274c62f6ee8bae7d70d968e01529f7d6af93 \
     --hash=sha256:ba118607b0ba6bfc1b236ec32019a355c47b5d012d01d976467d4692ef443929 \
-    # via -r requirements.in
+    # via johann (setup.py)
 fastapi==0.61.0 \
     --hash=sha256:29c12dd0d4ac825d13c2db4762d2863281c18085ae521825829182e977fd25ac \
     --hash=sha256:d0b3f629f8d165a21ee082bf31e1697c391c1cdf940304408614b5b7c59d1fb3 \
-    # via -r requirements.in
+    # via johann (setup.py)
 future==0.18.2 \
     --hash=sha256:b1bead90b70cf6ec3f0710ae53a525360fa360d306a86583adc6bf83a4db537d \
     # via celery
@@ -79,15 +79,15 @@ kombu==4.6.11 \
 logzero==1.5.0 \
     --hash=sha256:34fa1e2e436dfa9f37e5ff8750e932bafe0c5abbb42e1f669e4cf5ce1f179142 \
     --hash=sha256:818072e4fcb53a3f6fb4114a92f920e1135fe6f47bffd9dc2b6c4d10eedacf27 \
-    # via -r requirements.in
+    # via johann (setup.py)
 marshmallow-enum==1.5.1 \
     --hash=sha256:38e697e11f45a8e64b4a1e664000897c659b60aa57bfa18d44e226a9920b6e58 \
     --hash=sha256:57161ab3dbfde4f57adeb12090f39592e992b9c86d206d02f6bd03ebec60f072 \
-    # via -r requirements.in
+    # via johann (setup.py)
 marshmallow==3.7.1 \
     --hash=sha256:67bf4cae9d3275b3fc74bd7ff88a7c98ee8c57c94b251a67b031dc293ecc4b76 \
     --hash=sha256:a2a5eefb4b75a3b43f05be1cca0b6686adf56af7465c3ca629e5ad8d1e1fe13d \
-    # via -r requirements.in, marshmallow-enum
+    # via johann (setup.py), marshmallow-enum
 multidict==4.7.6 \
     --hash=sha256:1ece5a3369835c20ed57adadc663400b5525904e53bae59ec854a5d36b39b21a \
     --hash=sha256:275ca32383bc5d1894b6975bb4ca6a7ff16ab76fa622967625baeebcf8079000 \
@@ -110,7 +110,7 @@ multidict==4.7.6 \
 natsort==6.2.1 \
     --hash=sha256:c5944ffd2343141fa5679b17991c398e15105f3b35bb11beefe66c67e08289d5 \
     --hash=sha256:daae7b2e22ef21305bf6921e49f6ad25d0e29f924e96e3bb447449e11446c726 \
-    # via -r requirements.in
+    # via johann (setup.py)
 psutil==5.7.2 \
     --hash=sha256:0ee3c36428f160d2d8fce3c583a0353e848abb7de9732c50cf3356dd49ad63f8 \
     --hash=sha256:10512b46c95b02842c225f58fa00385c08fa00c68bac7da2d9a58ebe2c517498 \
@@ -123,7 +123,7 @@ psutil==5.7.2 \
     --hash=sha256:d8a82162f23c53b8525cf5f14a355f5d1eea86fa8edde27287dd3a98399e4fdf \
     --hash=sha256:f2018461733b23f308c298653c8903d32aaad7873d25e1d228765e91ae42c3f2 \
     --hash=sha256:ff1977ba1a5f71f89166d5145c3da1cea89a0fdb044075a12c720ee9123ec818 \
-    # via -r requirements.in
+    # via johann (setup.py)
 pydantic==1.6.1 \
     --hash=sha256:1783c1d927f9e1366e0e0609ae324039b2479a1a282a98ed6a6836c9ed02002c \
     --hash=sha256:2dc946b07cf24bee4737ced0ae77e2ea6bc97489ba5a035b603bd1b40ad81f7e \
@@ -146,7 +146,7 @@ pydantic==1.6.1 \
 python-dotenv==0.10.5 \
     --hash=sha256:440c7c23d53b7d352f9c94d6f70860242c2f071cf5c029dd661ccb22d64ae42b \
     --hash=sha256:f254bfd0c970d64ccbb6c9ebef3667ab301a71473569c991253a481f1c98dddc \
-    # via -r requirements.in
+    # via johann (setup.py)
 pytz==2020.1 \
     --hash=sha256:a494d53b6d39c3c6e44c3bec237336e14305e4f29bbf800b599253057fbb79ed \
     --hash=sha256:c35965d010ce31b23eeb663ed3cc8c906275d6be1a34393a1d73a41febf4a048 \
@@ -154,11 +154,11 @@ pytz==2020.1 \
 redis==3.5.3 \
     --hash=sha256:0e7e0cfca8660dea8b7d5cd8c4f6c5e29e11f31158c0b0ae91a397f00e5a05a2 \
     --hash=sha256:432b788c4530cfe16d8d943a09d40ca6c16149727e4afe8c2c9d5580c59d9f24 \
-    # via -r requirements.in
+    # via johann (setup.py)
 requests==2.24.0 \
     --hash=sha256:b3559a131db72c33ee969480840fff4bb6dd111de7dd27c8ee1f820f4f00231b \
     --hash=sha256:fe75cc94a9443b9246fc7049224f75604b113c36acb93f87b80ed42c44cbb898 \
-    # via -r requirements.in, docker
+    # via docker, johann (setup.py)
 ruamel.yaml==0.15.100 \
     --hash=sha256:08aaaa74ff66565024ecabf9ba2db212712382a21c0458f9a91c623a1fa83b34 \
     --hash=sha256:23f2efb872d2ebe3d5428b4f1a8f30cbf59f56e780c4981c155411ee65572673 \
@@ -178,7 +178,7 @@ ruamel.yaml==0.15.100 \
     --hash=sha256:bd4b60b649f4a81086f70cd56eff4722018ef36a28094c396f1a53bf450bd579 \
     --hash=sha256:fc6471ef15b69e454cca82433ac5f84929d9f3e2d72b9e54b06850b6b7133cc0 \
     --hash=sha256:ffc89770339191acbe5a15041950b5ad9daec7d659619b0ed9dad8c9c80c26f3 \
-    # via -r requirements.in
+    # via johann (setup.py)
 six==1.15.0 \
     --hash=sha256:30639c035cdb23534cd4aa2dd52c3bf48f06e5f4a941509c8bafd8ce11080259 \
     --hash=sha256:8b74bedcbbbaca38ff6d7491d76f2b06b3592611af620f8426e82dddb04a5ced \
