feat(plugins): use a new plugin system
The previous plugin system worked but was limited and, in particular,
not especially friendly to private plugins or to different end-users
wanting to download/use different set(s) of plugins.

BREAKING CHANGE: any old-style plugin will need to be re-written

* Plugins are now each a separate python distribution package
* Plugins must produce a pypi distribution containing a package whose
name starts with "johann_"
* Specify which plugins you want in `plugins.txt`
  * You may use pip requirements file syntax
* A `plugins.default.txt` is provided
* 'make prep' will copy the default over if plugins.txt does not exist
* A "johann_plugin_example" repo is forthcoming

Signed-off-by: Jeffrey James <lobotmcj@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -188,16 +188,14 @@ tags
 *.pycharm_helpers
 
 # additional Environments
-.env_* 
+.env_*
 
 # johann-specific
 johann*.log
 johann*.log.*
 johann*.pid
 johann/celeryd.pid
-johann/plugins
-johann/requirements_base.txt
-johann/requirements_plugins.txt
+johann/requirements.txt
 johann/run_conductor_pmtr*
 !johann/run_conductor_pmtr.default.sh
 !johann/run_conductor_pmtr.dev.sh
@@ -206,3 +204,6 @@ johann/run_player_pmtr*
 !johann/run_player_pmtr.dev.sh
 *.creds
 *.hosts.y*ml
+local_packages
+./plugins.txt
+johann/plugins.txt
