--- a/docker/Dockerfile.conductor
+++ b/docker/Dockerfile.conductor
@@ -2,14 +2,12 @@
 # Use of this source code is governed by a BSD-3-clause license that can
 # be found in the LICENSE file. See the AUTHORS file for names of contributors.
 
-ARG BASE_IMAGE=python:3.7-buster
-FROM $BASE_IMAGE
-
-WORKDIR /opt
-USER 0
+FROM python:3.7-buster
 
 # Ensure latest packages
 RUN apt-get update && apt-get upgrade -y
+
+WORKDIR /opt
 
 # get pmtr
 RUN git clone https://github.com/troydhanson/pmtr.git
@@ -25,28 +23,43 @@ WORKDIR /opt
 
 RUN rm -r pmtr
 
-WORKDIR /tmp/johann
+# Install Docker
+RUN curl https://get.docker.com | sh
 
 ARG JOHANN_PYTHON=/usr/local/bin/python3
 ENV JOHANN_PYTHON=$JOHANN_PYTHON
-
-# Install Johann and plugin requirements
-COPY johann/requirements_base.txt ./requirements_base.txt
-COPY johann/requirements_plugins.txt ./
-RUN $JOHANN_PYTHON -m pip install -r requirements_base.txt -r requirements_plugins.txt
+ARG PIP_INDEX_URL=https://pypi.org/simple
+ENV PIP_INDEX_URL=$PIP_INDEX_URL
 
 WORKDIR /opt/johann/johann
 
-RUN rm -rf /tmp/johann
+# Install Johann requirements
+COPY requirements.txt ./
+RUN $JOHANN_PYTHON -m pip install -r requirements.txt
 
-# do not specify a cmd since this file is sometimes used on top of an image with a CMD
-# specify CMD via docker-compose if needed
+WORKDIR /opt/johann
 
-# Install Johann (plugins mounted as docker volume)
-COPY johann/ ./
-ENV PYTHONPATH=/opt/johann
+# Install Johann
+COPY ./ ./
+RUN $JOHANN_PYTHON -m pip install -e .
+
+WORKDIR /opt/johann/johann
+
+# Install plugins
+ARG PLUGINS_FILE=plugins.txt
+ENV PLUGINS_FILE=$PLUGINS_FILE
+
+COPY $PLUGINS_FILE ./plugins.txt
+RUN $JOHANN_PYTHON -m pip install -r plugins.txt
+
+WORKDIR /opt/johann
 
 # Run Johann and any other programs via pmtr
 ARG RUN_PMTR_SUFFIX=default
 ENV RUN_PMTR_SUFFIX=$RUN_PMTR_SUFFIX
-CMD /bin/bash /opt/johann/johann/run_player_pmtr.$RUN_PMTR_SUFFIX.sh
+CMD /bin/bash /opt/johann/johann/run_conductor_pmtr.$RUN_PMTR_SUFFIX.sh
+
+# Expose Johann conductor port
+EXPOSE 5000
+
+RUN mkdir /srv/johann
