build: isolate generation of requirements*.txt
* pip --isolated for the compilation
  * prevent versions/hashes not from pypi.org in requirements*.txt
* restore header to requirements*.txt
  * helps catch if using non-standard index

Signed-off-by: Jeffrey James <lobotmcj@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,17 +57,21 @@ repos:
     rev: 5.2.1
     hooks:
       - id: pip-compile
-        args: [--quiet, --no-header, --generate-hashes, --no-emit-index-url]
+        args: [
+            --quiet,
+            --generate-hashes,
+            --no-emit-index-url,
+            --pip-args=--isolated, # ignore PIP_INDEX_URL, etc
+          ]
         files: ^((requirements(-.*)?\.(in|txt))|setup.py)$
       - id: pip-compile
         name: pip-compile-dev
-        args:
-          [
+        args: [
             --quiet,
-            --allow-unsafe,
-            --no-header,
             --generate-hashes,
             --no-emit-index-url,
+            --pip-args=--isolated, # ignore PIP_INDEX_URL, etc
+            --allow-unsafe,
             --output-file=requirements-dev.txt,
             requirements-dev.in,
           ]
