--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,9 +1,7 @@
 [bumpversion]
-current_version = 0.1.0a0
-parse = 0\.(?P<major>\d+)\.(?P<minor>\d+)a(?P<patch>\d+)
-serialize = 0.{major}.{minor}a{patch}
-commit = True
-tag = True
+current_version = 0.2.0-alpha
+commit = False
+tag = False
 sign_tags = True
 message = bump: {current_version} -> {new_version}
 commit_args = -s
