feat: add a basic web UI for using Johann
* `make up` or `make dev`
* http://127.0.0.1/

Signed-off-by: Jeffrey James <lobotmcj@gmail.com>

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -19,3 +19,4 @@ services:
     environment:
       - DEBUG=1
       - RUN_PMTR_SUFFIX=dev
+  # PLANNED: dev version of johann_web_basic with volume mounts, etc
